<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecepiStepsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor"
        android:foregroundTint="@color/accentColor">

        <TextView
            android:id="@+id/id_stepinstruction"
            android:layout_width="250sp"
            android:layout_height="125sp"
            android:layout_marginTop="16dp"
            android:background="@color/primaryLightColor"
            android:padding="5sp"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollbarAlwaysDrawVerticalTrack="false"
            android:text="@string/instruction"
            android:textAlignment="viewStart"
            android:textColor="@color/primaryTextColor"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/id_next"
            style="@android:style/Widget.Material.Button.Borderless.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:elevation="5sp"
            android:src="@drawable/ic_baseline_arrow_right_24"
            android:onClick="next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/id_stepinstruction"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/todo" />

        <ImageButton
            android:id="@+id/id_prev"
            style="@android:style/Widget.Material.Button.Borderless.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_baseline_arrow_left_24"
            android:elevation="5sp"
            android:onClick="prev"
            app:layout_constraintEnd_toStartOf="@+id/id_stepinstruction"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/id_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/timer"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/id_step_progress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_stepinstruction" />

        <ProgressBar
            android:id="@+id/id_step_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="345dp"
            android:layout_height="33dp"
            android:layout_marginBottom="8dp"
            android:max="100"
            android:progressTint="@color/accentColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>